test the workflow

--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -1,46 +1,44 @@
-name: CI / Build / Deploy (kubeconfig)
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main ]
 
 env:
-  IMAGE: krish/myapp
+  IMAGE: krishnaveni29/ci-cd-myapp:latest
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install & test
+      - name: Install & Test
         run: |
           npm ci
-          npm test
+          # remove test step if you don't have tests
+          # npm test
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image (tag: commit sha)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ${{ env.IMAGE }}:${{ github.sha }}
-          build-args: |
-            NODE_ENV=production
+          tags: ${{ env.IMAGE }}:latest
 
-      - name: Restore kubeconfig
+      - name: Setup kubeconfig
         run: |
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
@@ -50,8 +48,9 @@ jobs:
         with:
           version: 'latest'
 
-      - name: Apply manifests and update image
+      - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/
-          kubectl set image deployment/myapp myapp=${{ env.IMAGE }}:${{ github.sha }} -n default
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
+          kubectl set image deployment/myapp myapp=${{ env.IMAGE }}:latest -n default
           kubectl rollout status deployment/myapp -n default --timeout=120s
