--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,18 +16,18 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: yourdockerhubuser/myapp:PLACEHOLDER
+          image: krishnaveni29/ci-cd-myapp:latest
           ports:
-            - containerPort: 3000
+            - containerPort: 5000
           readinessProbe:
             httpGet:
               path: /
-              port: 3000
+              port: 5000
             initialDelaySeconds: 5
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /
-              port: 3000
+              port: 5000
             initialDelaySeconds: 30
             periodSeconds: 20
