--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -20,11 +20,9 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install & Test
+      - name: Install dependencies
         run: |
-          npm ci
-          # remove test step if you don't have tests
-          # npm test
+          npm install
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
