--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 env:
-  IMAGE: krishnaveni29/ci-cd-myapp:latest
+  IMAGE: krishnaveni29/ci-cd-myapp
 
 jobs:
   build-and-deploy:
