--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,33 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
-  labels:
-    app: myapp
+  name: simple-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: myapp
+      app: simple-app
   template:
     metadata:
       labels:
-        app: myapp
+        app: simple-app
     spec:
       containers:
-        - name: myapp
+        - name: simple-app
           image: krishnaveni29/ci-cd-myapp:latest
           ports:
             - containerPort: 5000
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 5000
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 5000
-            initialDelaySeconds: 30
-            periodSeconds: 20
