--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-svc
+  name: simple-app
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: myapp
+    app: simple-app
   ports:
-    - port: 80
-      targetPort: 5000
+  - port: 5000
+    targetPort: 5000
+    nodePort: 30080
