--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -13,13 +13,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-node-app:latest .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest .
 
     - name: Login to Docker Hub
-      run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
     - name: Push to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-node-app:latest
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest
 
     - name: Setup kubectl
       uses: azure/setup-kubectl@v3
@@ -27,7 +27,7 @@ jobs:
     - name: Configure Kubeconfig
       run: |
         mkdir -p ~/.kube
-        echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
+        echo "${{ secrets.KUBE_CONFIG_DATA }}" > ~/.kube/config
 
     - name: Deploy to Minikube
       run: |
