--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -25,9 +25,10 @@ jobs:
       uses: azure/setup-kubectl@v3
 
     - name: Configure Kubeconfig
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBE_CONFIG_DATA }}" > ~/.kube/config
+        echo "$KUBE_CONFIG_DATA" | base64 -d > $HOME/.kube/config
 
     - name: Deploy to Minikube
       run: |
