--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -28,6 +28,7 @@ jobs:
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
       run: |
+        mkdir -p $HOME/.kube
         echo "$KUBE_CONFIG_DATA" | base64 -d > $HOME/.kube/config
 
     - name: Deploy to Minikube
