--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -12,12 +12,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Login to Docker Hub
+      run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
+
     - name: Build Docker Image
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest .
-
-    - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
+      
     - name: Push to Docker Hub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest
 
