--- a/.github/workflows/ci-deploy-kubeconfig.yml
+++ b/.github/workflows/ci-deploy-kubeconfig.yml
@@ -16,8 +16,8 @@ jobs:
       run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_TOKEN }}"
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest .
-      
+      run: docker build --network host -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest .
+
     - name: Push to Docker Hub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-node-app:latest
 
